# resume-exporter

./: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  justfile  main.go
.github/workflows/: release.yml
models/: resume.go
src/: fonts.rs  main.rs  render.rs  resume.rs
src/templates/: classic.typ.tera  modern.typ.tera
templates/: classic.go  clean.go  modern.go
