[package]
name = "resume-exporter"
version = "1.0.1"
edition = "2021"
description = "Convert JSONResume to PDF via Typst"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
typst = "0.13"
typst-pdf = "0.13"
typst-kit = "0.13"
anyhow = "1"
chrono = "0.4"
dirs = "5"
